--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -1,7 +1,28 @@
-<h1>{{title}}</h1>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" routerlink="">Home</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" routerlink="/expenses-and-income">Expenses</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerlink="/profile" > Profile</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+
+
+
 <ul>
   <li><a routerLink="">Home</a></li>
   <li><a routerLink="/expenses-and-income">Expense</a></li>
   <li><a routerLink="/profile">Profile</a></li>
 </ul>
+<div class="container mt-5 mb-5">
+  <h1>Bootstrap works</h1>
+</div>
 <router-outlet></router-outlet>
