--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -1,28 +1,34 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" routerlink="">Home</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" routerlink="/expenses-and-income">Expenses</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerlink="/profile" > Profile</a>
-      </li>
-    </ul>
-  </div>
-</nav>
-
-
 
 <ul>
   <li><a routerLink="">Home</a></li>
-  <li><a routerLink="/expenses-and-income">Expense</a></li>
+  <li><a routerLink="/expenses-and-income">Expenses</a></li>
   <li><a routerLink="/profile">Profile</a></li>
 </ul>
-<div class="container mt-5 mb-5">
-  <h1>Bootstrap works</h1>
-</div>
+
+
+<h1 style= "text-align:center">
+  Your Monthly Summary
+  </h1>
+  
+  <div style="width: 80%; display: table; margin:auto;">
+      <div style="display: table-row">
+          <div style="width: 600px; display: table-cell; height: 600px;" class="pie_chart_container"> PIE CHART PIE CHART PIE CHART PIE CHART PIE CHART PIE CHART PIE CHART PIE CHART PIE CHART PIE CHART PIE CHART PIE CHART PIE CHART PIE CHART PIE CHART PIE CHART PIE CHART PIE CHART PIE CHART PIE CHART PIE CHART PIE CHART PIE CHART PIE CHART PIE CHART PIE CHART PIE CHART PIE CHART PIE CHART PIE CHART PIE CHART PIE CHART PIE CHART PIE CHART </div>
+          <div style="display: table-cell;"> 
+          <div class = "dashboard-item" style="background-color:#ECC8AF">
+          STUFF HERE ABOUT THE PIE CHART
+          </div>
+                  <div style="background-color:#E7AD99" class = "dashboard-item">
+          STUFF HERE ABOUT THE PIE CHART
+          </div>
+                  <div style="background-color:#CE796B" class = "dashboard-item">
+          STUFF HERE ABOUT THE PIE CHART
+          </div>
+                  <div style="background-color: #C18C5D" class = "dashboard-item">
+          STUFF HERE ABOUT THE PIE CHART
+  
+          
+          </div>
+      </div>
+  </div>
+  </div>
 <router-outlet></router-outlet>
