--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -7,28 +7,21 @@
 
 
 <h1 style= "text-align:center">
-  Your Monthly Summary
-  </h1>
+Summary</h1>
   
-  <div style="width: 80%; display: table; margin:auto;">
-      <div style="display: table-row">
-          <div style="width: 600px; display: table-cell; height: 600px;" class="pie_chart_container"> PIE CHART PIE CHART PIE CHART PIE CHART PIE CHART PIE CHART PIE CHART PIE CHART PIE CHART PIE CHART PIE CHART PIE CHART PIE CHART PIE CHART PIE CHART PIE CHART PIE CHART PIE CHART PIE CHART PIE CHART PIE CHART PIE CHART PIE CHART PIE CHART PIE CHART PIE CHART PIE CHART PIE CHART PIE CHART PIE CHART PIE CHART PIE CHART PIE CHART PIE CHART </div>
-          <div style="display: table-cell;"> 
+  <div style="width: 80%; margin:auto;">
+          <div style="width: 300px; height: 300px;" class="pie_chart_container"> pi </div>
           <div class = "dashboard-item" style="background-color:#ECC8AF">
-          STUFF HERE ABOUT THE PIE CHART
-          </div>
-                  <div style="background-color:#E7AD99" class = "dashboard-item">
-          STUFF HERE ABOUT THE PIE CHART
-          </div>
-                  <div style="background-color:#CE796B" class = "dashboard-item">
-          STUFF HERE ABOUT THE PIE CHART
-          </div>
-                  <div style="background-color: #C18C5D" class = "dashboard-item">
-          STUFF HERE ABOUT THE PIE CHART
-  
-          
-          </div>
-      </div>
-  </div>
+                STUFF HERE ABOUT THE PIE CHART
+                </div>
+                        <div style="background-color:#E7AD99" class = "dashboard-item">
+                STUFF HERE ABOUT THE PIE CHART
+                </div>
+                        <div style="background-color:#CE796B" class = "dashboard-item">
+                STUFF HERE ABOUT THE PIE CHART
+                </div>
+                        <div style="background-color: #C18C5D" class = "dashboard-item">
+                STUFF HERE ABOUT THE PIE CHART
+            </div>
   </div>
 <router-outlet></router-outlet>
