dashboard chart import

--- a/my-app/src/app/app.component.css
+++ b/my-app/src/app/app.component.css
@@ -29,7 +29,7 @@ background-color: #a8dadc;
     padding: 10px;
     border-radius: 25px;
     text-align:center;
-    box-shadow: 1px 0px #5a6269;
+    box-shadow: 1px 1px #5c4733;
   }
   .pie_chart_container{
     border-radius: 25px;
