--- a/my-app/src/app/new-expense-dialog/new-expense-dialog.component.html
+++ b/my-app/src/app/new-expense-dialog/new-expense-dialog.component.html
@@ -26,7 +26,7 @@
   </div>
 
   <div *ngIf="enableEditExpense">
-    Expense Name<input type="text" id="createExpenseName">
+    Edit {{ expenseBeingEdited }} <input type="text" id="createExpenseName">
     Amount<input type="number" id="createExpenseName">
     Repeats
     <select>
