--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -1,5 +1,5 @@
 
-<ul>
+<ul style="width:100%">
   <li><a routerLink="">Home</a></li>
   <li><a routerLink="/expenses-and-income">Expenses</a></li>
   <li><a routerLink="/profile">Profile</a></li>
