finish profile component

--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -6,7 +6,7 @@
 </ul>
 
 
-<h1 style= "text-align:center">
+<h1 style= "text-align:center; color:white;">
 Summary</h1>
   
   <div style="width: 80%; margin:auto;">
@@ -21,7 +21,7 @@ Summary</h1>
                 STUFF HERE ABOUT THE PIE CHART
                 </div>
                         <div style="background-color: #C18C5D" class = "dashboard-item">
-                STUFF HERE ABOUT THE PIE CHART
+                BOTTOM TEXT
             </div>
   </div>
 <router-outlet></router-outlet>
