--- a/my-app/src/app/expense/expense.component.html
+++ b/my-app/src/app/expense/expense.component.html
@@ -11,6 +11,8 @@
 
 <!-- Left Table Column: Expenses -->
 <h2>Expenses </h2>
+<h2>Balance {{ balance }}</h2>
+
 <table class="expenseTable">
 
     <!-- Header Row (Labels) -->
