--- a/my-app/src/app/dashboard/dashboard.component.html
+++ b/my-app/src/app/dashboard/dashboard.component.html
@@ -1,15 +1,45 @@
+<h1 id = "dashboard" class = "dashboard" style= "text-align:center; color:white;">My Dashboard</h1>
+ <div style="width: 100%; text-align: center"> 
+<button class = "dashboard-button top_button" (click)="clickExpensesView()">Expenses</button>
+<button class = "dashboard-button top_button" (click)="clickIncomeView()">Income</button>
+ </div>
+<div *ngIf="showExpensesView">
+  <div class = "chart">
+    <h2>My Expenses</h2>
+      <canvas baseChart 
+        [data] = "pieChartData"
+        [labels] = "pieChartLabels"
+        [chartType] = "pieChartType"
+        [options] = "pieChartOptions"
+        [plugins] = "pieChartPlugins"
+        [colors] = "pieChartColors"
+        [legend] = "pieChartLegend"
+      > </canvas>
+  </div>
+  <button class = "dashboard-button" (click)="showExpenses('day')">Day</button>
+  <button class = "dashboard-button" (click)="showExpenses('week')">Week</button>
+  <button class = "dashboard-button" (click)="showExpenses('month')">Month</button>
+  <button class = "dashboard-button" (click)="showExpenses('year')">Year</button>
+</div>
 
-    <h1 id = "dashboard" class = "dashboard">Dashboard</h1>
-    <script src= "https://cdn.jsdelivr.net/npm/chart.js@2.8.0/dist/Chart.min.js"></script>
-
- <canvas id="chart" width ="400" height ="400"> </canvas>
- <script>
-    
-    </script>
-         
-
-
-
+<div *ngIf="showIncomeView">
+  <div class = "chart">
+    <h2>My Income</h2>
+      <canvas baseChart 
+        [data] = "pieChartData"
+        [labels] = "pieChartLabels"
+        [chartType] = "pieChartType"
+        [options] = "pieChartOptions"
+        [plugins] = "pieChartPlugins"
+        [colors] = "pieChartColors"
+        [legend] = "pieChartLegend"
+      > </canvas>
+  </div>
+  <button class = "dashboard-button" (click)="showIncome('day')">Day</button>
+  <button class = "dashboard-button" (click)="showIncome('week')">Week</button>
+  <button class = "dashboard-button" (click)="showIncome('month')">Month</button>
+  <button class = "dashboard-button" (click)="showIncome('year')">Year</button>
+</div>
 
  
  
