--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -1,6 +1,6 @@
 
 <ul style="width:100%">
-  <li><a routerLink="">Home</a></li>
+  <li><a routerLink="">Dashboard</a></li>
   <li><a routerLink="/expenses-and-income">Expenses</a></li>
   <li><a routerLink="/profile">Profile</a></li>
 </ul>
