--- a/my-app/src/app/new-expense-dialog/new-expense-dialog.component.html
+++ b/my-app/src/app/new-expense-dialog/new-expense-dialog.component.html
@@ -2,53 +2,77 @@
 <mat-dialog-content> 
   <div *ngIf="enableNewExpense">
     <h2 mat-dialog-title>New Expense</h2>
-    Expense Name<input type="text" [(ngModel)]='expenseBeingEdited.name'>
-    Amount<input type="number" [(ngModel)]='expenseBeingEdited.amount'>
-    Repeats
-    <select [(ngModel)]="expenseBeingEdited.repeats">
-      <option>Daily</option>
-      <option>Weekly</option>
-      <option>Monthly</option>
-      <option>Yearly</option>
-    </select>
 
-    Category
-    <select [(ngModel)]="expenseBeingEdited.category">
-      <option *ngFor="let category of expenseCategories ">{{ category }}</option>
-    </select>
-    <button (click)="showCreateExpenseCategorySection()">New Expense Category</button>
-    
-    <input *ngIf="enableCategorySection" type="text" [(ngModel)]="createdCategoryName">
-    <button *ngIf="enableCategorySection" (click)="createExpenseCategory()">Create Category</button>
+    <div>
+      Expense Name
+      <input type="text" [(ngModel)]='expenseBeingEdited.name'>
+    </div>
 
-    <button (click)="createExpense()">Create Expense</button>
+    <div>
+      Amount
+      <input type="number" [(ngModel)]='expenseBeingEdited.amount'>
+    </div>
+
+    <div>
+      Repeats
+      <select [(ngModel)]="expenseBeingEdited.repeats">
+        <option>Never</option>
+        <option>Daily</option>
+        <option>Weekly</option>
+        <option>Monthly</option>
+        <option>Yearly</option>
+      </select>
+    </div>
+
+    <div>
+      Category
+      <select [(ngModel)]="expenseBeingEdited.category">
+        <option *ngFor="let category of expenseCategories ">{{ category }}</option>
+      </select>
+      <button (click)="showCreateExpenseCategorySection()">New Expense Category</button>
+      
+      <input *ngIf="enableCategorySection" type="text" [(ngModel)]="createdCategoryName">
+      <button *ngIf="enableCategorySection" (click)="createExpenseCategory()">Create Category</button>
+
+      <button (click)="createExpense()">Create Expense</button>
+    </div>
+
   </div>
-
+  
   <div *ngIf="enableEditExpense">
     Edit {{ expenseBeingEdited.name }}
-    <input type="text" value="expenseBeingEdited.name" [(ngModel)]="expenseBeingEdited.name"> -->
-    Amount<input type="number" id="editExpenseAmount" [(ngModel)]="expenseBeingEdited.amount">
-    Repeats
-    <select id="editExpenseRepeats" [(ngModel)]="expenseBeingEdited.repeats">
-      <option>Daily</option>
-      <option>Weekly</option>
-      <option>Monthly</option>
-      <option>Yearly</option>
-    </select>
-
-    Category
-    <select [(ngModel)]="expenseBeingEdited.category" id="editExpeneCategory">
-      <option *ngFor="let category of expenseCategories ">{{ category }}</option>
-    </select>
-    <button (click)="showCreateExpenseCategorySection()">New Expense Category</button>
     
-    <input *ngIf="enableCategorySection" type="text" [(ngModel)]="createdCategoryName">
-    <button *ngIf="enableCategorySection" (click)="createExpenseCategory()">Create Category</button>
+    <div>
+      Name<input type="text" [(ngModel)]="expenseBeingEdited.name">
+    </div>
+    
+    <div>
+      Amount<input type="number" id="editExpenseAmount" [(ngModel)]="expenseBeingEdited.amount">
+    </div>
+    
+    <div>
+      Repeats
+      <select id="editExpenseRepeats" [(ngModel)]="expenseBeingEdited.repeats">
+        <option>Daily</option>
+        <option>Weekly</option>
+        <option>Monthly</option>
+        <option>Yearly</option>
+      </select>
+    </div>
 
-    <button (click)="saveEditExpense()">Save Expense</button>
+    <div>
+      Category
+      <select [(ngModel)]="expenseBeingEdited.category" id="editExpeneCategory">
+        <option *ngFor="let category of expenseCategories ">{{ category }}</option>
+      </select>
+      <button (click)="showCreateExpenseCategorySection()">New {{ IsIncome ? "Income" : "Expens" }} Category</button>
+      
+      <input *ngIf="enableCategorySection" type="text" [(ngModel)]="createdCategoryName">
+      <button *ngIf="enableCategorySection" (click)="createExpenseCategory()">Create Category</button>
+
+      <button (click)="saveEditExpense()">Save Expense</button>
+    </div>
+
   </div>
 
-
-   
-      
 </mat-dialog-content>
