--- a/my-app/src/app/dashboard/dashboard.component.html
+++ b/my-app/src/app/dashboard/dashboard.component.html
@@ -6,7 +6,7 @@
 <div *ngIf="showExpensesView">
   <div class = "chart">
     <h2>My Expenses</h2>
-      <canvas style="Radius: 900; text-align: center" baseChart  
+      <canvas baseChart  
         [data] = "pieChartData"
         [labels] = "pieChartLabels"
         [chartType] = "pieChartType"
@@ -14,6 +14,7 @@
         [plugins] = "pieChartPlugins"
         [colors] = "pieChartColors"
         [legend] = "pieChartLegend"
+        [radius] = "pieChartRadius"  
       >
       </canvas>
   </div>
